FK-33 z-index fix

--- a/web/themes/custom/fds_green_theme/src/styles/theme/page/frontpage/front-top-banner.scss
+++ b/web/themes/custom/fds_green_theme/src/styles/theme/page/frontpage/front-top-banner.scss
@@ -41,5 +41,8 @@
 
     }
   }
+  .form-actions.js-form-wrapper.form-wrapper {
+    z-index: 1;
+  }
 }
 
